--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <h1> BIODATA </h1>  
-<img src="nawwaf.jpeg"><style>img { max-width: 10%; height: 10;}  
+<center><img src="nawwaf.jpeg"><style>img { max-width: 10%; height: 10;}</center>
 </style>  
 <table style="width: 50%">  
 <p>  
