--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<head>
+ <link rel="stylesheet" href="style.css
 <h1> BIODATA </h1>  
 <center><img src="nawwaf.jpeg"><style>img { max-width: 10%; height: 10;}</center>
 </style>  
