--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <head>
  <link rel="stylesheet" href="style.css
+<body>
 <h1> BIODATA </h1>  
 <center><img src="nawwaf.jpeg"><style>img { max-width: 10%; height: 10;}</center>
 </style>  
