--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css"
 <body>	
 <h1> BIODATA </h1>  
-<center><img src="nawwaf.jpeg"><style>img(width: 200)</center>
+<center><img src="nawwaf.jpeg"width: "200"></center>
 </style>  
 <table style="width: 50%">  
 <p>  
