--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -53,7 +53,7 @@
      height="280px";>
   <img src="4.jpeg" width="220px";
      height="280px";>
-  <img src="5"width="220px";
+  <img src="5.jpeg"width="220px";
      height="280px";>
   <img src="6.jpeg"width="220px";
      height="280px";>
