--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -23,7 +23,7 @@
 				<ul>
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Pengalaman PJJ</a></li>
+					<li><a href="contact.html">Contact</a></li>
 					<li><a href="fotogaleri.html">Nawwaf's Gallery</a></li>
 				</ul>
 			</div>
