--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 				<h2><a href="index.html">Yaqzhan Nawwaf Fatahilah</a></h2>
 				<ul>
 					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="biodata.html">About</a></li>
 					<li><a href="fotogaleri.html">Nawwaf's Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
