--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -63,6 +63,8 @@
      height="280px";>
   <img src="9.jpeg" width="220px";
      height="280px";>
+  <img src="10.jpeg" width="220px";
+     height="280px";>
 
  </center>
 
